[gd_scene load_steps=4 format=3 uid="uid://btr2jdlhfi8uk"]

[ext_resource type="Script" uid="uid://c7bsrh40uxaci" path="res://scripts/actors/pressure_plate.gd" id="1_cy0dw"]

[sub_resource type="BoxShape3D" id="BoxShape3D_uv2xg"]
size = Vector3(2, 0.2, 2)

[sub_resource type="BoxMesh" id="BoxMesh_24wwx"]
size = Vector3(2, 0.2, 2)

[node name="PressurePlate" type="Area3D"]
collision_layer = 12
collision_mask = 34
script = ExtResource("1_cy0dw")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_uv2xg")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_24wwx")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
